--- a/style.css
+++ b/style.css
@@ -21,3 +21,7 @@ h1, h2, h3, h4, h5, h6 {
     display: table-cell;
     vertical-align: middle;
 }
+#aboutMe {
+    background-color: #f26522;
+    color: #fff;
+}
