--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,20 @@
 .body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
+    height:100%;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
 }
+
+body, html{
+margin: 0;
+padding: 0;
+height: 100%;}
+
+#content {min-height: 100%; }
 #landingPhoto {
     background: url("../images/landing.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -14,8 +22,11 @@
     -o-background-size: cover;
     background-size: cover;
     color: #fff;
+    margin: 0;
+    padding: 0;
     display: table;
-    height: 100%
+    width: 100%;
+    height: 100%;
 }
 #landingContent {
     display: table-cell;
@@ -27,10 +38,11 @@
 }
 
 /*************************************/
-/**OVERRIDE BOOTSTRAP PRIMARY BUTTON**/
+/** OVERRIDE BOOTSTRAP PRIMARY BUTTON
 /*************************************/
 .btn-primary{
     color:#fff;
+    /*background-color:#fa6b63; */
     background-color:#f26522;
     border-color:#f26522;
 }
@@ -40,6 +52,7 @@
     border-color:#cc480a;
 }
 .btn-primary.focus,.btn-primary:focus{
+    /*box-shadow:0 0 0 .2rem rgba(0,123,255,.5); */
     box-shadow:none;
 }
 .btn-primary.disabled,.btn-primary:disabled{
@@ -53,6 +66,7 @@
     border-color:#f26522;
 }
 .btn-primary:not(:disabled):not(.disabled).active:focus,.btn-primary:not(:disabled):not(.disabled):active:focus,.show>.btn-primary.dropdown-toggle:focus{
+    /*box-shadow:0 0 0 .2rem rgba(0,123,255,.5); */
     box-shadow:none;
 }
 
